welcome.lessons.welcome.array.has271.Has271.scala.error
has271:7: error: not found: value random3
			else if (nums(x)==2&&nums(x+1)==7&&(nums(x+2)==1+random3()||nums(x+2)=1-random3())) i=true
                                                                         ^