welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
	var i:Boolean=false;
	
	if (nums.length>=3) {
		for (x<-0 to nums.length-3) {
			if (nums(x+1)==nums(x)+5&&nums(x+2)==nums(x)-1) i=true
			else if (nums(x)==2&&nums(x+1)==7&&(nums(x+2)==1+random3()||nums(x+2)=1-random3())) i=true
		}
	}
	return i
}
